# parallel-programming-competition-uni.lu

./: .gitignore  LICENSE  README.md  client_progress.csv
docs/: CNAME  index.html
problem/: README.md  problem.md
problem/code/: CMakeLists.txt
problem/code/include/: base.hpp  client.hpp  cmd.hpp  helper.hpp
problem/code/src/: base.cpp  main.cpp
